# ChangeLog for x11-misc/afbinit
# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-misc/afbinit/ChangeLog,v 1.20 2007/04/28 12:56:19 tove Exp $

  28 Apr 2007; Torsten Veller <tove@gentoo.org> afbinit-1.0.1-r5.ebuild:
  Use newinitd

  16 Nov 2006; Ferris McCormick <fmccor@gentoo.org> afbinit-1.0.1-r5.ebuild:
  Marking stable and closing Bug #132464 --- No new problems have been reported
  for 3 months, and this change is needed for afb+current kernels.

  22 Oct 2006; David Shakaryan <omp@gentoo.org> -afbinit-1.0.1-r3.ebuild:
  Remove older version.

  11 Aug 2006; Ferris McCormick <fmccor@gentoo.org>
  -afbinit-1.0.1-r2.ebuild:
  Remove completely obsolete version.

*afbinit-1.0.1-r5 (09 Aug 2006)

  09 Aug 2006; Ferris McCormick <fmccor@gentoo.org>
  +files/rc.afb-1.0.1-r5.patch, afbinit-1.0.1-r4.ebuild,
  +afbinit-1.0.1-r5.ebuild:
  afbinit-1.0.1-r4 stable on sparc.
  afbinit-1.0.1-r5 modifies /usr/sbin/rc.afb so that it uses /dev/fbxx for the
  Elite framebuffer device(s) rather than /dev/fb/xx, because with current
  kernels, baselayout, udev, it seems that /dev/fb/xx devices no longer exist,
  and /dev/fbxx are the real devices rather than symbolic links into /dev/fb.
  
  This fixes Bug #132464 once again, thanks to Jan Holtzhausen (and to IRC user
  je_fro for raising the issue as well).

  06 May 2006; Ferris McCormick <fmccor@gentoo.org> afbinit-1.0.1-r4.ebuild:
  Add an RDEPEND for util-linux (it seems one could actually build a
  system without /bin/more on it.)

*afbinit-1.0.1-r4 (06 May 2006)

  06 May 2006; Ferris McCormick <fmccor@gentoo.org>
  +files/rc.afb-1.0.1-r4.patch, +afbinit-1.0.1-r4.ebuild:
  Version bump.  Proposed fix for Bug #132464 --- problems with afbinit and
  '/cat/ -s'.

  28 Apr 2006; Alec Warner <antarus@gentoo.org>
  files/digest-afbinit-1.0.1-r2, Manifest:
  Fixing SHA256 digest, pass four

  26 Feb 2006; Ferris McCormick <fmccor@gentoo.org> afbinit-1.0.1-r3.ebuild: