@@ -1,6 +1,6 @@
-# Copyright 1999-2006 Gentoo Foundation
+# Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/afbinit/Attic/afbinit-1.0.1-r4.ebuild,v 1.3 2006/08/09 15:44:00 fmccor Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/afbinit/Attic/afbinit-1.0.1-r4.ebuild,v 1.4 2007/04/28 21:53:45 swegener Exp $
 
 inherit eutils
 
@@ -36,7 +36,7 @@ src_compile() {
 src_install() {
 	dosbin afbinit
 	dosbin rc.afb
-	exeinto /etc/init.d ; newexe ${FILESDIR}/afbinit.init afbinit
+	newinitd ${FILESDIR}/afbinit.init afbinit
 }
 
 pkg_postinst() {
