@@ -1,6 +1,9 @@
 # ChangeLog for x11-misc/afbinit
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/afbinit/ChangeLog,v 1.20 2007/04/28 12:56:19 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/afbinit/ChangeLog,v 1.21 2007/04/28 21:53:45 swegener Exp $
+
+  28 Apr 2007; Sven Wegener <swegener@gentoo.org> afbinit-1.0.1-r4.ebuild:
+  Fix *initd, *confd and *envd calls (#173884, #174266)
 
   28 Apr 2007; Torsten Veller <tove@gentoo.org> afbinit-1.0.1-r5.ebuild:
   Use newinitd
